# nicewebrl-cec

./: .gitmodules  CLAUDE.md  README.md  convert_examples_to_submodules.sh  index.html  pyproject.toml
.github/workflows/: generate-homepage.yml
examples/custom/: environment.py  experiment_structure.py  web_app.py
examples/minigrid-LLM-assistant-fixed/: data_analysis.ipynb  experiment_structure.py  web_app_Gemini.py
examples/xland-LLM-assistant-fixed/: data_analysis_LLMEnvStage.ipynb  experiment_structure.py  web_app_assistant.py
home/: environments.csv  generate_html.py  index.html  text.txt
nicewebrl/: __init__.py  basics.js  experiment.py  multihuman_stages.py  multihuman_utils.py  nicejax.py  nicetorch.py  run_experiment.py  stages.py  utils.py
